<?xml version="1.0" encoding="utf-8"?>
<resources><string name="app_name">电话拨号器</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text1">电话号码</string>
    <string name="text2">请输入电话号码</string>
    <string name="text3">拨打号码</string>
    <string name="txt1">veiw1</string>
    <string name="txt2">veiw2</string>
    <string name="txt3">veiw3</string>
    <string name="txt4">veiw4</string>
    <string name="txt5">veiw5</string>
    <string name="activity_name">新的activity</string>
    <string name="info">登录系统</string>
    <string name="name">用户名：</string>
    <string name="name1">请输入用户名</string>
    <string name="password">密     码：</string>
    <string name="password1">请输入密码</string>
    <string name="red">登录</string>
    <string name="bb">注册</string>
    <string name="exit">取消</string>
    <string name="textview_txt">让其显示滚动的文字，所以需要较长的内容。这么长应该够了。不够的话再来添加</string>
	<string name="demo_text_them">代码实现的Activity</string>
	<string name="baidu">www.baidu.com</string>
	<string name="style">这是自定义的style样式,需要长一点才能看到效果哟。</string>
	<string name="button_text">按钮</string>
	<string name="buttontoactivity">点击按钮事件出来新的activity</string>
	<string name="event_text1">内部类实现点击事件处理</string>
	<string name="event_text2">实现接口处理点击事件处理</string>
	
</resources>
