<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/holo_blue_bright">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textSize="30sp"
        android:paddingLeft="100dp"
        android:background="@android:color/darker_gray"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt2"
        android:textSize="30sp"
        android:paddingLeft="100dp"
        android:background="@android:color/black"/>
    
    <LinearLayout
        android:id="@+id/qq"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_dark"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/txt3"
            android:textSize="20sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt4"
            android:textSize="20sp"
            android:layout_weight="1" 
            android:background="@android:color/holo_purple"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt5"
            android:textSize="20sp"
            android:layout_weight="1" 
            android:background="@android:color/holo_red_light"/>
        
    </LinearLayout>d

   
    
</LinearLayout>


