<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:hint="@string/text2"
		android:textColorHint="@android:color/holo_blue_light"/>
    <Button
        android:id = "@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"/>

    
</LinearLayout>
