<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray" >
    
    <TextView
        android:id="@id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textSize="30sp"
        android:paddingLeft="100dp"
        android:background="@android:color/holo_blue_dark"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView1"
        android:text="@string/txt2"
        android:textSize="30sp"
        android:paddingLeft="100dp"
        android:background="@android:color/holo_blue_dark"/>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_light">
        
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/txt3"
            android:background="@android:color/holo_green_light"/>
        
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/txt4"
            android:background="@android:color/holo_purple"/>
        
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/txt5"
            android:background="@android:color/holo_green_light"/>      
    
 	</LinearLayout>   
 	    
</RelativeLayout>


    
