<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark">
    
    <TextView
        android:id="@+id/TextView1"
        android:text="@string/txt1"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"/>
    
    <TextView
        android:id="@+id/TextView2"
        android:text="@string/txt2"
        android:layout_below="@id/TextView1"
        android:layout_marginBottom="40dp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"/>
    
    
  
    <TextView
        android:id="@+id/TextView4"
        android:text="@string/txt4"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"/>
    
      <TextView
        android:id="@+id/TextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/TextView4"
        android:text="@string/txt3"
        android:layout_alignParentBottom="true"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"/>
    
    <TextView
        android:id="@+id/TextView5"
        android:text="@string/txt5"
        android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/TextView4"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"/>
    
    

</RelativeLayout>
